# ai-harness-scorecard

./: .commitlintrc.yml  .gitignore  .pre-commit-config.yaml  AGENTS.md  ARCHITECTURE.md  CODEOWNERS  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  action.yml  mutmut_config.py  pyproject.toml  scorecard-badge.json  scorecard-report.md
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/workflows/: ci.yml  pr-size.yml  scorecard.yml
docs/adr/: 0001-deterministic-file-based-checks.md  0002-additive-scoring-model.md
docs/designs/: README.md
hoshi/: ai-assisted-dev-framework-sec.md  example.md  scorecard_cli.md
resources/: README.md
src/ai_harness_scorecard/: __init__.py  ci_parser.py  cli.py  models.py  repo_context.py  scanner.py
src/ai_harness_scorecard/checks/: __init__.py  ai_safeguards.py  base.py  constraints.py  documentation.py  review.py  testing.py
src/ai_harness_scorecard/reporters/: __init__.py  badge.py  json_reporter.py  markdown.py
tests/: test_checks.py  test_ci_parser.py  test_models.py  test_reporters.py  test_script_resolution.py
tests/fixtures/: golden_json_output.json
